--- a/style 1.css
+++ b/style 1.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url("https://i.pinimg.com/originals/4d/df/ac/4ddfacf35b0ebc0efd87e0493b0c21cc.jpg");
+    background-image: url("kuro.jpg");
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
 }
