--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@
 }
 
 body {
-    background-image: url("kuro.jpg");
-    background-repeat: no-repeat;
-    background-size: 100vw 100vh;
+    background-color: #c279d8;
 }
 
 .interface {
@@ -50,6 +48,12 @@ header .menu-desktop nav ul li a {
     color: white;
     text-decoration: none;
     margin-top: 0px;
+}
+
+section .fundo {
+    background-image: url("kuro.jpg");
+    background-repeat: no-repeat;
+    background-size: 100vw 100vh;
 }
 
 section .autobiografia {
