--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-image: url("kurom.jpg");
+    background-image: url("papelkuro.jpg");
     background-repeat: no-repeat;
     background-size: 100vw 100vh;
 }
