--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 header {
     width: 100%;
     padding: 40px 0;
-    background: #c279d8;
+    background: #ffcbdb;
     height: 16vh;
 }
 
